--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/doashboard/doashboard.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/doashboard/doashboard.component.html
@@ -9,9 +9,9 @@
         <div class="flex">
           <h2>Tổng đơn hàng</h2>
           <div class="absolute left-5 bottom-4">
-            <span [style]="{ 'font-size': '25px', 'font-weight': 'bold' }"
-              >1024</span
-            >
+            <span [style]="{ 'font-size': '25px', 'font-weight': 'bold' }">{{
+              countOrder
+            }}</span>
           </div>
           <div
             class="absolute right-4 bottom-4"
@@ -31,9 +31,9 @@
         <div class="flex">
           <h2>Đối tác</h2>
           <div class="absolute left-5 bottom-4">
-            <span [style]="{ 'font-size': '25px', 'font-weight': 'bold' }"
-              >1024</span
-            >
+            <span [style]="{ 'font-size': '25px', 'font-weight': 'bold' }">{{
+              countAgency
+            }}</span>
           </div>
           <div
             class="absolute right-4 bottom-4"
@@ -53,9 +53,9 @@
         <div class="flex">
           <h2>Tổng tàu hoạt động</h2>
           <div class="absolute left-5 bottom-4">
-            <span [style]="{ 'font-size': '25px', 'font-weight': 'bold' }"
-              >1024</span
-            >
+            <span [style]="{ 'font-size': '25px', 'font-weight': 'bold' }">{{
+              countVehicle
+            }}</span>
           </div>
           <div
             class="absolute right-4 bottom-4"
@@ -75,9 +75,9 @@
         <div class="flex">
           <h2>Tổng số vé bán ra</h2>
           <div class="absolute left-5 bottom-4">
-            <span [style]="{ 'font-size': '25px', 'font-weight': 'bold' }"
-              >1024</span
-            >
+            <span [style]="{ 'font-size': '25px', 'font-weight': 'bold' }">{{
+              countTicket
+            }}</span>
           </div>
           <div
             class="absolute right-4 bottom-4"
