--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/payment/payment.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/payment/payment.component.html
@@ -1,1 +1,102 @@
-<p>payment works!</p>
+<p-toast position="top-right"></p-toast>
+<div class="admin-page p-3">
+  <p-card header="Danh sách thanh toán">
+    <p-toolbar styleClass="p-mb-4">
+      <ng-template pTemplate="left">
+        <span class="p-input-icon-right">
+          <i class="pi pi-search"></i>
+          <input
+            pInputText
+            type="text"
+            (input)="dt.filterGlobal(getValue($event), 'contains')"
+            placeholder="Tìm Kiếm..."
+          />
+        </span>
+      </ng-template>
+    </p-toolbar>
+    <div class="mt-5"></div>
+
+    <hr />
+    <div class="grid">
+      <div class="col-12">
+        <p-table
+          #dt
+          [value]="businessPayment"
+          [rows]="10"
+          [showCurrentPageReport]="true"
+          [rowsPerPageOptions]="[10, 20, 50]"
+          [paginator]="true"
+          [filterDelay]="0"
+          [globalFilterFields]="['name', 'phoneNumber']"
+          styleClass="p-datatable-sm"
+          responsiveLayout="scroll"
+        >
+          <ng-template pTemplate="header">
+            <tr>
+              <th class="hidden">ID</th>
+              <th pSortableColumn="name">
+                Chủ tàu <p-sortIcon field="name"></p-sortIcon>
+              </th>
+              <th>Số điện thoại</th>
+
+              <th>Tổng tiền</th>
+              <th>Trạng thái</th>
+              <th style="width: 16%"></th>
+            </tr>
+          </ng-template>
+
+          <ng-template pTemplate="body" let-businessPayment>
+            <!-- <tr *ngIf="loading">
+              <td><p-skeleton></p-skeleton></td>
+              <td><p-skeleton></p-skeleton></td>
+              <td><p-skeleton></p-skeleton></td>
+              <td><p-skeleton></p-skeleton></td>
+              <td><p-skeleton></p-skeleton></td>
+              <td><p-skeleton></p-skeleton></td>
+            </tr> -->
+            <tr *ngIf="!loading">
+              <td>{{ businessPayment?.name }}</td>
+              <td>{{ businessPayment?.phoneNumber }}</td>
+              <td>{{ businessPayment?.totalPrice | currency: 'VND' }}</td>
+              <td></td>
+              <td>
+                <button
+                  pButton
+                  pRipple
+                  icon="fab fa-amazon-pay"
+                  class="p-button-raised p-button-secondary mr-2"
+                  label="Thanh toán"
+                  (click)="
+                    confirmPayment(
+                      businessPayment.id,
+                      businessPayment?.totalPrice
+                    )
+                  "
+                ></button>
+              </td>
+            </tr>
+          </ng-template>
+        </p-table>
+      </div>
+    </div>
+  </p-card>
+</div>
+<p-confirmDialog
+  [style]="{ width: '50vw' }"
+  [baseZIndex]="10000"
+  rejectButtonStyleClass="p-button-text"
+></p-confirmDialog>
+
+<!-- <p-dialog
+  [(visible)]="display"
+  [modal]="true"
+  [breakpoints]="{ '960px': '75vw', '640px': '100vw' }"
+  [style]="{ width: '50vw' }"
+  [responsive]="true"
+>
+  <ng-template pTemplate="header">
+    <h2>CONFIRM PAYMENT <i class="fab fa-amazon-pay"></i></h2>
+  </ng-template>
+  Content
+  <ng-template pTemplate="footer"> //buttons </ng-template>
+</p-dialog> -->
