Ông trời sinh ra selected box rồi mà còn đi thêm cái nút remove làm mẹ gì rồi ngồi code tới 12h

--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/components/tour-form/tour-form.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/components/tour-form/tour-form.component.html
@@ -120,14 +120,14 @@
                     cdkDrag
                   >
                     Chặng {{ i + 1 }}: {{ list.name }}
-                    <button
+                    <!-- <button
                       pButton
                       pRipple
                       type="button"
                       icon="pi pi-times"
                       class="p-button-rounded p-button-danger p-button-text"
                       (click)="removeListDes(i, list.id)"
-                    ></button>
+                    ></button> -->
                   </div>
                 </div>
               </div>
