final fix drag to drop

--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/components/ticket-type-form/ticket-type-form.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/components/ticket-type-form/ticket-type-form.component.html
@@ -42,7 +42,7 @@
                   <div class="col-5">
                     <div class="col-12">
                       Tên Tour:
-                      <p>{{ tour?.tittle }}</p>
+                      <p>{{ tour?.title }}</p>
                     </div>
                     <div class="col-12">
                       Trạng thái tour:
