--- a/WebApp/booking-yacht/apps/booking-yacht/src/styles.scss
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/styles.scss
@@ -1,5 +1,11 @@
 @import './assets/scss/argon.scss';
 @import 'animate.css';
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
