--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/components/tour-form/tour-form.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/components/tour-form/tour-form.component.html
@@ -1,17 +1,17 @@
 <p-toast position="top-right"></p-toast>
 <div class="admin-page p-3">
   <p-card
-    [header]="editMode ? 'Update Tour' : 'New Tour'"
-    [subheader]="editMode ? '' : 'Create A new Tour'"
+    [header]="editMode ? 'Cập nhật tour' : 'Tạo mới tour'"
+    [subheader]="editMode ? '' : ''"
   >
     <p-toolbar>
       <div class="p-toolbar-group-left"></div>
       <div class="p-toolbar-group-right">
         <p-button
-          [label]="editMode ? 'Update' : 'Save'"
+          [label]="editMode ? 'Cập nhật' : 'Lưu'"
           icon="pi pi-check"
           [styleClass]="
-            editMode ? 'p-button-warning mr-2' : 'p-button-info mr-2'
+            editMode ? 'p-button-warning mr-2 ' : 'p-button-info mr-2 '
           "
           (click)="onSubmit()"
         ></p-button>
@@ -28,20 +28,20 @@
       <div class="col-12">
         <form [formGroup]="form">
           <div class="p-fluid formgrid grid">
-            <div [class]="editMode ? 'p-field col-8' : 'p-field col-12'">
-              <label for="tittle">Tiêu đề</label>
+            <div [class]="editMode ? 'p-field col-7' : 'p-field col-12'">
+              <label for="title">Tiêu đề</label>
 
               <input
-                id="tittle"
-                formControlName="tittle"
+                id="title"
+                formControlName="title"
                 type="text"
                 pInputText
               />
-              <small *ngIf="tourForm.tittle.invalid && isSubmit" class="p-error"
+              <small *ngIf="tourForm.title.invalid && isSubmit" class="p-error"
                 >Tiêu đề không được rỗng</small
               >
             </div>
-            <div class="p-field col-4" *ngIf="editMode">
+            <div class="p-field col-5" *ngIf="editMode">
               <label for="status">Status</label>
               <p-dropdown
                 optionLabel="name"
@@ -91,39 +91,78 @@
           </div>
         </form>
       </div>
+      <p-divider align="center" type="dashed">
+        <span class="p-tag" style="background-color: var(--teal-400)">
+          CHỌN CHẶN CHO TOUR
+        </span>
+      </p-divider>
       <div class="p-fluid formgrid grid mt-4">
         <div class="col-12">
-          <div class="col-12">
-            <h2>Chọn chặn cho tour</h2>
-          </div>
           <div class="col-12 mt-4">
-            <div class="grid">
+            <div class="grid" cdkDropListGroup>
               <div class="col-6">
-                <p-multiSelect
+                <!-- <p-multiSelect
                   [options]="destiations!"
                   [(ngModel)]="selectedDes"
                   defaultLabel="Chọn chặn đi"
                   optionLabel="name"
                   (onChange)="onChange()"
-                ></p-multiSelect>
+                ></p-multiSelect> -->
+                <!-- <cdk-virtual-scroll-viewport itemSize="50" class="example-viewport">
+                  <div *cdkVirtualFor="let item of items" class="example-item">{{item}}</div>
+                </cdk-virtual-scroll-viewport> -->
+                <div class="text-lg-center">
+                  <h3 class="text-primary">CHỌN CHẶNG</h3>
+                </div>
+                <p-scrollPanel [style]="{ width: '100%', height: '400px' }">
+                  <div class="example-container">
+                    <div
+                      cdkDropList
+                      [cdkDropListData]="destiations"
+                      #todoList="cdkDropList"
+                      [cdkDropListConnectedTo]="[doneList]"
+                      class="example-list"
+                      (cdkDropListDropped)="drop($event)"
+                    >
+                      <div
+                        class="example-box"
+                        *ngFor="let item of destiations"
+                        cdkDrag
+                      >
+                        {{ item.name }}
+                      </div>
+                    </div>
+                  </div>
+                </p-scrollPanel>
               </div>
               <div class="col-6">
-                <div
-                  cdkDropList
-                  class="example-list"
-                  (cdkDropListDropped)="drop($event)"
-                >
-                  <div
-                    class="example-box"
-                    *ngFor="let list of ListDes; let i = index"
-                    [cdkDragData]="list"
-                    cdkDrag
-                  >
-                    Chặng {{ i + 1 }}: {{ list.name }}
-                  </div>
+                <div class="text-lg-center">
+                  <h3 class="text-primary">CHẶNG ĐÃ CHỌN</h3>
                 </div>
+                <p-scrollPanel [style]="{ width: '100%', height: '400px' }">
+                  <div
+                    cdkDropList
+                    #doneList="cdkDropList"
+                    [cdkDropListConnectedTo]="[todoList]"
+                    [cdkDropListData]="ListDes"
+                    class="example-list"
+                    (cdkDropListDropped)="drop($event)"
+                  >
+                    <div
+                      class="example-box"
+                      *ngFor="let list of ListDes; let i = index"
+                      [cdkDragData]="list"
+                      cdkDrag
+                    >
+                      Chặng {{ i + 1 }}: {{ list.name }}
+                    </div>
+                  </div>
+                </p-scrollPanel>
               </div>
             </div>
+            <!--  -->
+
+            <!--  -->
           </div>
         </div>
       </div>
@@ -138,7 +177,7 @@
               <p-skeleton></p-skeleton>
             </div>
             <div class="p-field col-8">
-              <label for="name">Tittle</label>
+              <label for="name">title</label>
 
               <p-skeleton></p-skeleton>
             </div>
