--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/components/tour-form/tour-form.component.scss
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/components/tour-form/tour-form.component.scss
@@ -54,3 +54,25 @@
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
+
+.p-scrollpanel {
+  p {
+    padding: 0.5rem;
+    line-height: 1.5;
+    margin: 0;
+  }
+
+  .p-scrollpanel-wrapper {
+    border-right: 9px solid var(--layer-1);
+
+    .p-scrollpanel-bar {
+      background-color: #2251fc;
+      opacity: 1;
+      transition: background-color 0.2s;
+
+      &:hover {
+        background-color: #007ad9;
+      }
+    }
+  }
+}
