--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/doashboard/doashboard.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/doashboard/doashboard.component.html
@@ -108,17 +108,15 @@
             <tr>
               <th class="hidden">ID</th>
               <th>Tên Tour</th>
-              <th pSortableColumn="agencyName">
+              <th pSortableColumn="agencyName" style="width: 20%">
                 Tên đại lý <p-sortIcon field="agencyName"></p-sortIcon>
               </th>
               <!-- <th pSortableColumn="dateOrder">
                 Ngày đặt <p-sortIcon field="dateOrder"></p-sortIcon>
               </th> -->
               <th>Số người</th>
-              <th>Trạng thái</th>
-              <th pSortableColumn="totalPrice">
-                Tổng tiền<p-sortIcon field="totalPrice"></p-sortIcon>
-              </th>
+              <th style="width: 18%">Trạng thái</th>
+              <th pSortableColumn="totalPrice">Tổng tiền</th>
               <th></th>
             </tr>
           </ng-template>
