--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/tours/tours.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/tours/tours.component.html
@@ -75,17 +75,17 @@
                 styleClass="mt-2"
               ></p-skeleton>
               <p-skeleton
-                width="30rem"
+                width="100%"
                 height="1rem"
                 styleClass="mt-2"
               ></p-skeleton>
               <p-skeleton
-                width="30rem"
+                width="100%"
                 height="1rem"
                 styleClass="mt-2"
               ></p-skeleton>
               <p-skeleton
-                width="30rem"
+                width="100%"
                 height="1rem"
                 styleClass="mt-2"
               ></p-skeleton>
