--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/destinations/destinations.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/destinations/destinations.component.html
@@ -47,7 +47,7 @@
           [rowsPerPageOptions]="[10, 20, 50]"
           [paginator]="true"
           [filterDelay]="0"
-          [globalFilterFields]="['address', 'apartmentName']"
+          [globalFilterFields]="['name', 'apartmentName']"
           styleClass="p-datatable-sm"
           responsiveLayout="scroll"
         >
